2000-07-20  Hans-Peter Nilsson  <hp@axis.com>

	* MAINTAINERS: Add self as CRIS port maintainer.
	* readelf.c: Include elf/cris.h.
	(guess_is_rela): Handle EM_CRIS.
	(dump_relocations): Ditto.
	(get_machine_name): Ditto.
	* Makefile.am: Rebuild dependencies.
	* Makefile.in: Regenerate.
	* po/binutils.pot: Regenerate.

2000-07-19  H.J. Lu  <hjl@gnu.org>

	* readelf.c (get_dynamic_type): Change "AUXILARY" to
	"AUXILIARY".
	(process_dynamic_segment): Print out strings for DT_CONFIG,
	DT_DEPAUDIT, DT_AUDIT and DT_RUNPATH.

2000-07-19  Mark Kettenis  <kettenis@gnu.org>

	* nm.c (usage): Change output of `nm --help' to include a
	description of the purpose of the program and a detailed
	description of the accepted options.

2000-07-19  H.J. Lu  <hjl@gnu.org>

	* readelf.c (process_dynamic_segment): Change DF_1_NODEPLIB
	to DF_1_NODEFLIB.

2000-07-19  H.J. Lu  <hjl@gnu.org>

	* readelf.c (get_dynamic_type): Fix DT_CHECKSUM.

2000-07-19  H.J. Lu  <hjl@gnu.org>

	* readelf.c (get_dynamic_type): Change DT_FEATURE_1 to
	DT_FEATURE.
	(process_dynamic_segment): Likewise.

	* readelf.c (get_dynamic_type): Handle DT_CONFIG, DT_DEPAUDIT,
	DT_AUDIT, DT_PLTPAD, DT_MOVETAB and DT_CHECKSUM.
	(process_dynamic_segment): Handle DTF_1_CONFEXP, DF_1_NODEPLIB,
	DF_1_NODUMP and DF_1_CONLFAT.

2000-07-18  Nick Clifton  <nickc@cygnus.com>

	* binutils.texi (readelf): Fix spelling typo.

2000-07-11  Mark Kettenis  <kettenis@gnu.org>

	* objdump.c (usage): Make output of `objdump --help' more
	consistent with the rest of the GNU world.  Add a line describing
	the purpose of the program.

2000-07-10  David Huggins-Daines  <dhd@linuxcare.com>

	* stabs.c (parse_stab_range_type): Cast to proper type to fix
	warning.

2000-07-10  Ryan Bradetich  <rbradetich@uswest.net>

	* readelf.c (get_dynamic_data): Add casts and use unsigned chars
	to fix warnings.
	(process_symbol_table): Ditto.
	(procesS_extended_line_op): Ditto.
	(display_debug_lines): Ditto.
	(display_debug_pubnames): Ditto.