@@ -478,12 +478,14 @@ are annotated.  If this option is specified, every line in
 a basic-block is annotated by repeating the annotation for the
 first line.  This behavior is similar to @code{tcov}'s @samp{-a}.
 
-@item --demangle
+@item --demangle[=@var{style}]
 @itemx --no-demangle
 These options control whether C++ symbol names should be demangled when
 printing output.  The default is to demangle symbols.  The
-@code{--no-demangle} option may be used to turn off demangling.
-
+@code{--no-demangle} option may be used to turn off demangling. Different 
+compilers have different mangling styles.  The optional demangling style 
+argument can be used to choose an appropriate demangling style for your 
+compiler.
 @end table
 
 @node Analysis Options,Miscellaneous Options,Output Options,Invoking
