@@ -1,3 +1,8 @@
+2000-07-05  Kenneth Block  <krblock@computer.org>
+
+        * gprof/gprof.c: Add optional style to demangle switch
+        * gprof/gprof.texi: Document optional style to demangle switch.
+
 2000-06-05  DJ Delorie  <dj@redhat.com>
 
 	* MAINTAINERS: new
