@@ -1,3 +1,8 @@
+2000-07-05  Kenneth Block  <krblock@computer.org>
+
+        * ld/lexsup.c: Add optional style to demangle switch
+        * ld/ld.texinfo: Document optional style to demangle switch.
+	
 2000-07-20  Hans-Peter Nilsson  <hp@axis.com>
 
 	* Makefile.am (ALL_EMULATIONS): Add ecrisaout.o, ecriself.o,
